enviando alterações com tag

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Olá Mundo</title>
 </head>
 <body>
-<<<<<<< Updated upstream
     <h1>Olá Mundo</h1>
-=======
-    <h1>Olá mundo</h1>
->>>>>>> Stashed changes
+    <h1>Bem-vindo ao meu site!</h1>
 </body>
 </html>
